--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
+  width: 90%;
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
@@ -90,7 +90,7 @@ body {
 }
 
 .nav-bar .nav-right li:last-child:hover {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(105, 102, 102, 0.2);
 }
 
 .nav-bar .nav-right .menu-hamb {
@@ -99,6 +99,7 @@ body {
 
 .nav-bar .nav-right li:nth-child(2) {
   border: 2px solid black;
+  cursor: pointer;
   border-radius: 8px;
   padding: 6px;
 }
@@ -145,7 +146,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  color: black;
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
@@ -164,7 +164,7 @@ body {
 .principal .left-side input {
   width: 30%;
   height: 30px;
-  color: white;
+  color: #fff;
   background-color: black;
   border-radius: 8px;
 }
@@ -247,6 +247,7 @@ body {
 
 .fechar img {
   padding: 10px;
+  cursor: pointer;
 }
 
 .menu-invisible {
@@ -292,12 +293,12 @@ body {
 .menu-invisible2 .transparent {
   width: 30%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(105, 102, 102, 0.2);
 }
 
 .menu-invisible2 .menu-lateral {
   background-color: #fff;
-  color: #000;
+  color: gray;
   width: 70%;
   height: 100vh;
   display: -webkit-box;
@@ -312,18 +313,7 @@ body {
   font-size: 16px;
 }
 
-.menu-invisible2 .menu-lateral li:nth-child(5) {
-  margin-top: 35px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 100%;
-}
-
-.menu-invisible2 .menu-lateral li:nth-child(6) {
+.menu-invisible2 .menu-lateral li:nth-child(8) {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -331,7 +321,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border: solid black 2px;
+  border: solid gray 2px;
   border-radius: 8px;
   padding: 10px;
 }
@@ -342,11 +332,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  cursor: pointer;
 }
 
 .menu-invisible2 .menu-lateral .register {
   width: 100%;
   font-size: 16px !important;
+  cursor: pointer;
 }
 
 .menu-invisible2 .menu-lateral .register:hover {
@@ -355,35 +347,74 @@ body {
 }
 
 /*------------------DROP DOWN DESKTOP ------------------*/
+.img-down-arrow {
+  margin-left: 6px;
+  cursor: pointer;
+  z-index: 1000000;
+}
+
+.img-down-arrow2 {
+  display: none;
+}
+
+.img-up-arrow {
+  display: none;
+}
+
+.img-up-arrow2 {
+  margin-left: 6px;
+  cursor: pointer;
+  z-index: 1000000;
+}
+
+/*---------------------------------------------------------------------------------------*/
+.img-drop-down-second2 {
+  display: none;
+}
+
+.img-drop-down-second {
+  margin-left: 10px;
+  cursor: pointer;
+  z-index: 1000000;
+}
+
+.img-drop-up-second {
+  display: none;
+}
+
+.img-drop-up-second2 {
+  margin-left: 7px;
+  cursor: pointer;
+  z-index: 1000000;
+}
+
+/*--------------------------------------------------------------------*/
 .drop-down {
   display: none;
 }
 
-.features {
-  cursor: pointer;
-}
-
-.features .drop-down {
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
+.drop-down2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   border-radius: 10px;
   -webkit-box-shadow: 5px 5px 15px 5px #949090;
           box-shadow: 5px 5px 15px 5px #949090;
-  display: flex;
   padding: 6px;
-  position: absolute;
-  margin-top: 10px;
   min-width: 100px;
   z-index: 1000;
-  background-color: white;
+  background-color: #fff;
   height: 22%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  position: absolute;
+  margin-top: 6px;
 }
 
-.features .drop-down ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.drop-down2 ul {
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -393,35 +424,36 @@ body {
           align-items: initial !important;
 }
 
-.features .drop-down ul li:hover {
+.drop-down2 ul li:hover {
   font-size: 16px;
 }
 
-.company {
-  cursor: pointer;
+.drop-down-company {
+  display: none;
 }
 
-.company .drop-down {
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
+.drop-down-company2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   border-radius: 10px;
   -webkit-box-shadow: 5px 5px 15px 5px #949090;
           box-shadow: 5px 5px 15px 5px #949090;
-  display: flex;
-  padding: 5px;
-  position: absolute;
-  margin-top: 10px;
-  min-width: 87px;
+  padding: 6px;
+  min-width: 100px;
   z-index: 1000;
-  background-color: white;
-  height: 16%;
+  background-color: #fff;
+  height: 17%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  position: absolute;
+  margin-top: 6px;
 }
 
-.company .drop-down ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.drop-down-company2 ul {
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -431,38 +463,43 @@ body {
           align-items: initial !important;
 }
 
-.company .drop-down ul li:hover {
+.drop-down-company2 ul li:hover {
   font-size: 16px;
-}
-
-span .up-arrow {
-  background-color: red;
-}
-
-span .down-arrow {
-  background-color: green;
 }
 
 /*------------------DROP DOWN MOBILE ------------------*/
+.carrers,
+.about {
+  cursor: pointer;
+}
+
+.login {
+  width: 100% !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+}
+
 .features-lateral,
 .company-lateral {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
-.features-lateral .drop-down-lateral,
-.company-lateral .drop-down-lateral {
+.drop-down-lateral {
   display: none !important;
 }
 
-.features-lateral .drop-down-lateral2,
-.company-lateral .drop-down-lateral2 {
-  margin-top: 14px;
+.drop-down-lateral2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -470,8 +507,7 @@ span .down-arrow {
   height: 150px;
 }
 
-.features-lateral .drop-down-lateral2 ul,
-.company-lateral .drop-down-lateral2 ul {
+.drop-down-lateral2 ul {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -480,16 +516,71 @@ span .down-arrow {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.features-lateral .drop-down-lateral2 li img,
-.company-lateral .drop-down-lateral2 li img {
+.drop-down-lateral2 li img {
   vertical-align: middle;
+}
+
+/*---------CLASSES SUBSTITUIDAS PARA DROPDOWN SUPERIOR-------------*/
+.down-arrow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 6px;
+  z-index: 1000;
+  cursor: pointer;
+}
+
+.down-arrow2 {
+  display: none;
+}
+
+.up-arrow {
+  display: none;
+}
+
+.up-arrow2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 6px;
+  z-index: 1000;
+  cursor: pointer;
+}
+
+/*---------CLASSES SUBSTITUIDAS PARA DROPDOWN INFERIOR-------------*/
+.downarrow3 {
+  margin-left: 6px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  z-index: 10000;
+}
+
+.uparrow3 {
+  margin-left: 6px;
+  display: none;
+}
+
+.downarrow4 {
+  margin-left: 6px;
+  display: none;
+}
+
+.uparrow4 {
+  margin-left: 6px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  z-index: 10000;
 }
 
 /*---------------MEDIA QUERIES------------*/
@@ -519,10 +610,7 @@ span .down-arrow {
     display: unset;
   }
   .audio {
-    -webkit-box-orient: horizontal !important;
-    -webkit-box-direction: normal !important;
-        -ms-flex-direction: row !important;
-            flex-direction: row !important;
+    display: none !important;
   }
   .nav-left ul li:nth-child(2),
   .nav-left ul li:nth-child(3),
@@ -541,6 +629,7 @@ span .down-arrow {
   }
   .menu-hamb {
     display: block !important;
+    cursor: pointer;
     margin-right: 20px;
   }
   .principal {
@@ -666,6 +755,9 @@ span .down-arrow {
 @media screen and (max-width: 737px) {
   .nav-bar .nav-left {
     width: 75%;
+  }
+  .nav-bar .nav-right ul {
+    width: 97% !important;
   }
 }
 
