--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap');
+@import 'variables.scss';
+
 
 * {
     box-sizing: border-box;
@@ -20,8 +22,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
-
 
     .nav-left {
         width: 60%;
@@ -54,7 +54,7 @@ body {
 
         ul {
             display: flex;
-            width: 100%;
+            width: 90%;
             justify-content: space-around;
         }
 
@@ -68,7 +68,7 @@ body {
         }
 
         li:last-child:hover {
-            background-color: rgba($color: black, $alpha: .2);
+            background-color: $hoverColor;
         }
 
 
@@ -77,7 +77,8 @@ body {
         }
 
         li:nth-child(2) {
-            border: 2px solid black;
+            border: 2px solid $textoColor;
+            cursor: pointer;
             border-radius: 8px;
             padding: 6px;
         }
@@ -112,7 +113,6 @@ body {
         width: 45%;
         height: 100%;
         flex-direction: column;
-        color: black;
         justify-content: space-around;
 
         h2 {
@@ -130,8 +130,8 @@ body {
         input {
             width: 30%;
             height: 30px;
-            color: white;
-            background-color: black;
+            color: $whiteColor;
+            background-color: $textoColor;
             border-radius: 8px;
         }
 
@@ -199,8 +199,8 @@ body {
 
     img {
         padding: 10px;
-    }
-
+        cursor: pointer;
+    } 
 }
 
 
@@ -221,25 +221,25 @@ body {
     @keyframes animateleft {
         from {
             left: -10px;
-            opacity: 0
+            opacity: 0;
         }
 
         to {
             left: 0;
-            opacity: 1
+            opacity: 1;
         }
     }
 
     .transparent {
         width: 30%;
         height: 100vh;
-        background-color: rgba($color: black, $alpha: .5);
+        background-color: $hoverColor;
     }
 
     .menu-lateral {
 
-        background-color: #fff;
-        color: #000;
+        background-color: $whiteColor;
+        color: $grayColor;
         width: 70%;
         height: 100vh;
         display: flex;
@@ -248,18 +248,12 @@ body {
         gap: 14px;
         font-size: 16px;
 
-        li:nth-child(5) {
-            margin-top: 35px;
-            display: flex;
-            justify-content: center;
-            width: 100%;
-        }
 
-        li:nth-child(6) {
+        li:nth-child(8) {
             width: 100%;
             display: flex;
             justify-content: center;
-            border: solid black 2px;
+            border: solid $grayColor 2px;
             border-radius: 8px;
             padding: 10px;
         }
@@ -268,17 +262,18 @@ body {
             list-style-type: none;
             width: 60%;
             display: flex;
-
+            cursor: pointer;
         }
 
         .register {
             width: 100%;
             font-size: 16px !important;
+            cursor: pointer;
         }
 
         .register:hover {
-            background-color: rgba($color: rgb(105, 102, 102), $alpha: .2);
-            text-align: center;
+            background-color: $hoverColor;
+            text-align: center; 
         }
     }
 
@@ -286,352 +281,421 @@ body {
 
 /*------------------DROP DOWN DESKTOP ------------------*/
 
+.img-down-arrow {
+    margin-left: 6px;
+    cursor: pointer;
+    z-index: 1000000;
+}
+
+.img-down-arrow2 {
+    display: none;
+}
+
+
+.img-up-arrow {
+    display: none;
+}
+
+.img-up-arrow2 {
+    margin-left: 6px;
+    cursor: pointer;
+    z-index: 1000000;
+}
+
+
+/*---------------------------------------------------------------------------------------*/
+
+
+.img-drop-down-second2 {
+    display: none;
+}
+
+.img-drop-down-second {
+    margin-left: 10px;
+    cursor: pointer;
+    z-index: 1000000;
+}
+
+
+.img-drop-up-second {
+    display: none;
+}
+
+.img-drop-up-second2 {
+    margin-left: 7px;
+    cursor: pointer;
+    z-index: 1000000;
+}
+
+
+/*--------------------------------------------------------------------*/
 
 .drop-down {
     display: none;
-
 }
 
-.features {
-    cursor: pointer;
+.drop-down2 {
+    display: flex;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px 5px $shadowColor;
+    padding: 6px;
+    min-width: 100px;
+    z-index: 1000;
+    background-color: $whiteColor;
+    height: 22%;
+    flex-direction: row;
+    position: absolute;
+    margin-top: 6px;
 
-    .drop-down {
-        display: flex !important;
-        border-radius: 10px;
-        box-shadow: 5px 5px 15px 5px #949090;
-        display: flex;
-        padding: 6px;
-        position: absolute;
-        margin-top: 10px;
-        min-width: 100px;
-        z-index: 1000;
-        background-color: white;
-        height: 22%;
-
-
-        ul {
-            display: flex;
-            flex-direction: column;
-            align-items: initial !important;
+    ul {
+        display: none;
+        flex-direction: column;
+        align-items: initial !important;
 
 
-            li:hover {
-                font-size: 16px;
-            }
+        li:hover {
+            font-size: 16px;
         }
     }
 }
 
-.company {
-    cursor: pointer;
+.drop-down-company {
+    display: none;
+}
 
-    .drop-down {
-        display: flex !important;
-        border-radius: 10px;
-        box-shadow: 5px 5px 15px 5px #949090;
-        display: flex;
-        padding: 5px;
-        position: absolute;
-        margin-top: 10px;
-        min-width: 87px;
-        z-index: 1000;
-        background-color: white;
-        height: 16%;
+.drop-down-company2 {
+    display: flex;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px 5px $shadowColor;
+    padding: 6px;
+    min-width: 100px;
+    z-index: 1000;
+    background-color: $whiteColor;
+    height: 17%;
+    flex-direction: row;
+    position: absolute;
+    margin-top: 6px;
 
-        ul {
-            display: flex;
-            flex-direction: column;
-            align-items: initial !important;
+    ul {
+        display: none;
+        flex-direction: column;
+        align-items: initial !important;
 
-            li:hover {
-                font-size: 16px;
-            }
 
+        li:hover {
+            font-size: 16px;
         }
-    }
 
-}
-
-span {
-    .up-arrow {
-        background-color: red; 
-    }
-
-    .down-arrow {
-        background-color: green; 
     }
 }
+
+
+
 
 
 /*------------------DROP DOWN MOBILE ------------------*/
+.carrers,
+.about {
+    cursor: pointer;
+}
+
+.login {
+    width: 100% !important;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.features-lateral,
+.company-lateral {
+    display: flex;
+    flex-direction: row;
+}
+
+.drop-down-lateral {
+    display: none !important;
+}
+
+.drop-down-lateral2 {
+    display: flex;
+    width: 100%;
+    height: 150px;
 
 
-    .features-lateral,
-    .company-lateral {
+    ul {
+        width: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
 
-        .drop-down-lateral {
-            display: none !important;
+    li img {
+        vertical-align: middle;
+    }
+}
+
+
+/*---------CLASSES SUBSTITUIDAS PARA DROPDOWN SUPERIOR-------------*/
+
+
+.down-arrow {
+    display: flex;
+    margin-left: 6px; // SETA P BAIXO SEM CLICK  
+    z-index: 1000;
+    cursor: pointer;
+}
+
+.down-arrow2 {
+    display: none; // SETA P BAIXO DESABILITADA  
+}
+
+.up-arrow {
+    display: none; // SETA P CIMA DESABILITADA  
+}
+
+.up-arrow2 {
+    display: flex; // SETA P CIMA HABILITADA  
+    margin-left: 6px;
+    z-index: 1000;
+    cursor: pointer;
+}
+
+
+/*---------CLASSES SUBSTITUIDAS PARA DROPDOWN INFERIOR-------------*/
+
+
+.downarrow3 {
+    margin-left: 6px; // SETA P BAIXO HABILITADA  
+    display: flex;
+    cursor: pointer;
+    z-index: 10000;
+}
+
+.uparrow3 {
+    margin-left: 6px; // SETA P CIMA DESABILITADA  
+    display: none;
+}
+
+
+.downarrow4 {
+    margin-left: 6px; // SETA P BAIXO DESABILITADA  
+    display: none;
+}
+
+.uparrow4 {
+    margin-left: 6px; // SETA P CIMA HABILITADA  
+    display: flex;
+    cursor: pointer;
+    z-index: 10000;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*---------------MEDIA QUERIES------------*/
+
+@media screen and (min-width:600px) {
+    .menu-invisible2 {
+        display: none;
+    }
+}
+
+@media screen and (max-width:280px) {
+    .menu-invisible2 {
+        .transparent {
+            width: 25% !important;
         }
 
-        .drop-down-lateral2 {
-            margin-top: 14px;
-            display: flex;
-            width: 100%;
-            height: 150px;
+        .menu-lateral {
+            width: 75% !important;
+        }
+    }
+}
 
+@media screen and (max-width:600px) {
+    .nav-bar {
+        height: 10vh !important;
 
-            ul {
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-end;
-                justify-content: space-around;
-            }
+        .nav-right {
+            width: unset !important; 
 
-            li img {
-                vertical-align: middle;
+            .menu-hamb {
+                display: unset;
             }
         }
     }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    /*---------------MEDIA QUERIES------------*/
-
-    @media screen and (min-width:600px) {
-        .menu-invisible2 {
-            display: none;
-        }
+    .audio {
+        display: none !important;
     }
 
-    @media screen and (max-width:280px) {
-        .menu-invisible2 {
-            .transparent {
-                width: 25% !important;
-            }
-
-            .menu-lateral {
-                width: 75% !important;
-            }
-        }
-    }
-
-    @media screen and (max-width:600px) {
-        .nav-bar {
-            height: 10vh !important;
-
-            .nav-right {
-                width: unset !important;
-
-                .menu-hamb {
-                    display: unset;
-                }
-            }
-        }
-
-        .audio {
-            flex-direction: row !important;
-        }
-
-        .nav-left ul li:nth-child(2),
-        .nav-left ul li:nth-child(3),
-        .nav-left ul li:nth-child(4),
-        .nav-left ul li:nth-child(5) {
-            display: none;
-        }
-
-
-        .nav-bar .nav-left ul {
-            justify-content: flex-start !important;
-            margin-left: 20px;
-        }
-
-        .nav-bar .nav-right ul {
-            display: none;
-        }
-
-        .menu-hamb {
-            display: block !important;
-            margin-right: 20px;
-        }
-
-        .principal {
-            flex-direction: column-reverse;
-
-            .left-side {
-                width: 100% !important;
-                height: 38% !important;
-
-                h2 {
-                    font-size: 30px;
-                    text-align: center;
-                }
-
-                p {
-                    text-align: center;
-                }
-
-                .botao {
-                    display: flex;
-                    justify-content: center;
-                }
-            }
-
-            .right-side {
-                width: 100% !important;
-                height: 62% !important;
-
-                .desktop {
-                    display: none;
-                    object-fit: contain !important;
-                }
-
-                .mobile {
-                    display: block;
-                    object-fit: contain !important;
-                }
-            }
-        }
-    }
-
-    @media screen and (max-width:850px) {
-        .right-side img {
-            object-fit: cover;
-        }
+    .nav-left ul li:nth-child(2),
+    .nav-left ul li:nth-child(3),
+    .nav-left ul li:nth-child(4),
+    .nav-left ul li:nth-child(5) {
+        display: none;
     }
 
 
-    @media screen and (max-width:947px) {
-
-        .audio {
-            flex-direction: column;
-
-
-            .audio1 {
-                width: 100% !important;
-                flex-direction: column !important;
-            }
-
-            .audio2 {
-                width: 100% !important;
-                flex-direction: column !important;
-            }
-        }
+    .nav-bar .nav-left ul {
+        justify-content: flex-start !important;
+        margin-left: 20px;
     }
 
-    @media screen and (max-width:449px) {
-        .audio {
-            .audio1 ul li {
-                align-items: center;
+    .nav-bar .nav-right ul {
+        display: none;
+    }
+
+    .menu-hamb {
+        display: block !important;
+        cursor: pointer;
+        margin-right: 20px;
+    }
+
+    .principal {
+        flex-direction: column-reverse;
+
+        .left-side {
+            width: 100% !important;
+            height: 38% !important;
+
+            h2 {
+                font-size: 30px;
+                text-align: center;
+            }
+
+            p {
+                text-align: center;
+            }
+
+            .botao {
                 display: flex;
                 justify-content: center;
             }
+        }
+
+        .right-side {
+            width: 100% !important;
+            height: 62% !important;
+
+            .desktop {
+                display: none;
+                object-fit: contain !important;
+            }
+
+            .mobile {
+                display: block;
+                object-fit: contain !important;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:850px) {
+    .right-side img {
+        object-fit: cover;
+    }
+}
+
+
+@media screen and (max-width:947px) {
+
+    .audio {
+        flex-direction: column;
+
+
+        .audio1 {
+            width: 100% !important;
+            flex-direction: column !important;
+        }
+
+        .audio2 {
+            width: 100% !important;
+            flex-direction: column !important;
+        }
+    }
+}
+
+@media screen and (max-width:449px) {
+    .audio {
+        .audio1 ul li {
+            align-items: center;
+            display: flex;
+            justify-content: center;
+        }
+
+        img {
+            width: 80%;
+        }
+
+        .audio2 ul li {
+            align-items: center;
+            display: flex;
+            justify-content: center;
 
             img {
-                width: 80%;
-            }
-
-            .audio2 ul li {
-                align-items: center;
-                display: flex;
-                justify-content: center;
-
-                img {
-                    width: 70%;
-                }
-            }
-        }
-    }
-
-
-    @media screen and (max-width:340px) {
-        .principal {
-            .right-side {
-                height: 40% !important;
-            }
-
-            .left-side {
-                height: 60% !important;
-            }
-        }
-    }
-
-    @media screen and (max-width:833px) {
-        .nav-bar {
-            .nav-left {
                 width: 70%;
             }
-
-            .nav-right {
-                width: 25%;
-            }
         }
     }
+}
 
-    @media screen and (max-width:737px) {
-        .nav-bar {
-            .nav-left {
-                width: 75%;
-            }
+
+@media screen and (max-width:340px) {
+    .principal {
+        .right-side {
+            height: 40% !important;
+        }
+
+        .left-side {
+            height: 60% !important;
         }
     }
+}
 
-    @media screen and (min-width:1000px) {
-        .nav-bar {
-            .nav-left {
-                width: 50%;
-            }
+@media screen and (max-width:833px) {
+    .nav-bar {
+        .nav-left {
+            width: 70%;
+        }
 
-            .nav-right {
-                width: 17%;
-            }
+        .nav-right {
+            width: 25%;
         }
     }
+}
+
+@media screen and (max-width:737px) {
+    .nav-bar {
+        .nav-left {
+            width: 75%;
+        }
+
+        .nav-right ul {
+            width: 97% !important;
+        }
+    }
+}
+
+@media screen and (min-width:1000px) {
+    .nav-bar {
+        .nav-left {
+            width: 50%;
+        }
+
+        .nav-right {
+            width: 17%;
+        }
+    }
+}
